chore(JIRA-15): update layout for all sections of the home page

--- a/src/views/other/home.ejs
+++ b/src/views/other/home.ejs
@@ -64,7 +64,7 @@
                                 <p class="product-card__category">CATEGORIA</p>
                                 <p class="product-card__name">CASCO PARA BOMBEROS</p>
                                 <p class="product-card__price">$ 1.116.846,17</p>
-                                <button class="product-card__add-button btn btn--primary btn btn--primary">AÑADIR AL CARRITO</button>
+                                <button class="product-card__add-button btn btn--primary">AÑADIR AL CARRITO</button>
                             </div>
                         </article>  
                         <article class="product-card">
@@ -116,7 +116,7 @@
                             </div>
                         </article>  
                     </div>
-                    <button class="products__view-more">VER MÁS</button>
+                    <button class="products__view-more btn btn--secondary">VER MÁS</button>
                 </section>
                 <!-- /Section products -->
                 <!-- Section categories -->
@@ -156,7 +156,7 @@
                             </div>
                         </article>  
                     </div>
-                    <button class="categories__view-more">VER MÁS</button>
+                    <button class="categories__view-more btn btn--secondary">VER MÁS</button>
                 </section>
                 <!-- /Section categories -->
                 <!-- Section about -->   
@@ -168,7 +168,7 @@
                         <p class="about__text">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit voluptates quo nemo neque nesciunt similique minus itaque impedit eveniet blanditiis dicta est nam in perferendis tenetur, error eum dolore doloremque, quasi pariatur sint natus exercitationem mollitia veniam!
                         </p>
-                        <button type="submit" class="about__button">VER MÁS</button>
+                        <button type="submit" class="about__submit btn btn--secondary">VER MÁS</button>
                     </div>
                 </section> 
                 <!-- /Section about -->
@@ -192,6 +192,7 @@
                                     <div class="review__social-icons">                                        
                                         <i class="fa-brands fa-facebook"></i>
                                         <i class="fa-brands fa-instagram"></i>
+                                        <i class="fa-brands fa-x-twitter"></i>
                                     </div>
                                 </div>
                             </div>
@@ -210,6 +211,7 @@
                                     <div class="review__social-icons">                                        
                                         <i class="fa-brands fa-facebook"></i>                                    
                                         <i class="fa-brands fa-instagram"></i>
+                                        <i class="fa-brands fa-x-twitter"></i>
                                     </div>
                                 </div>
                             </div>
@@ -228,6 +230,7 @@
                                     <div class="review__social-icons">                                        
                                         <i class="fa-brands fa-facebook"></i>                                    
                                         <i class="fa-brands fa-instagram"></i>
+                                        <i class="fa-brands fa-x-twitter"></i>
                                     </div>
                                 </div>
                             </div>
@@ -246,6 +249,7 @@
                                     <div class="review__social-icons">                                        
                                         <i class="fa-brands fa-facebook"></i>                                    
                                         <i class="fa-brands fa-instagram"></i>
+                                        <i class="fa-brands fa-x-twitter"></i>
                                     </div>
                                 </div>
                             </div>
@@ -287,33 +291,33 @@
                             <article class="contact__info-item">
                                 <i class="fa-solid fa-envelope"></i>
                                 <div class="contact__info-content">
-                                    <h3 class="label--medium">Email</h3>
-                                    <p class="label--small">Nuestro equipo está para ayudarte.</p>
-                                    <p class="label--small"><a href="mailto:hello@workzone.com" class="contact__email-link">hello@workzone.com</a></p>                                    
+                                    <h3 class="text--medium">Email</h3>
+                                    <p class="text--small">Nuestro equipo está para ayudarte.</p>
+                                    <p class="text--small"><a href="mailto:hello@workzone.com" class="contact__email-link">hello@workzone.com</a></p>                                    
                                 </div>
                             </article>
                             <article class="contact__info-item">
                                 <i class="fa-solid fa-comments"></i>
                                 <div class="contact__info-content">
-                                    <h3 class="label--medium">Chat en vivo</h3>
-                                    <p class="label--small">¿Necesitas asistencia inmediata?</p>
-                                    <p class="label--small"><a href="https://wa.me/5491156092589" target="_blank" class="contact__chat-link">Iniciar nuevo chat</a></p>                                    
+                                    <h3 class="text--medium">Chat en vivo</h3>
+                                    <p class="text--small">¿Necesitas asistencia inmediata?</p>
+                                    <p class="text--small"><a href="https://wa.me/5491156092589" target="_blank" class="contact__chat-link">Iniciar nuevo chat</a></p>                                    
                                 </div>
                             </article>
                             <article class="contact__info-item">
                                 <i class="fa-solid fa-location-dot"></i>
                                 <div class="contact__info-content">
-                                    <h3 class="label--medium">Dirección</h3>
-                                    <p class="label--small">Nuestra oficina se encuentra ubicada en:</p>
-                                    <p class="label--small">123, Zuviria, CABA</p>                                    
+                                    <h3 class="text--medium">Dirección</h3>
+                                    <p class="text--small">Nuestra oficina se encuentra ubicada en:</p>
+                                    <p class="text--small">123, Zuviria, CABA</p>                                    
                                 </div>
                             </article>
                             <article class="contact__info-item">
                                 <i class="fa-solid fa-phone"></i>
                                 <div class="contact__info-content">
-                                    <h3 class="label--medium">Teléfono</h3>
-                                    <p class="label--small">Atención de Lunes a Viernes, 8 am - 5 pm</p>
-                                    <p class="label--small">(+54) 1156092589</p>
+                                    <h3 class="text--medium">Teléfono</h3>
+                                    <p class="text--small">Atención de Lunes a Viernes, 8 am - 5 pm</p>
+                                    <p class="text--small">(+54) 1156092589</p>
                                 </div>
                             </article>
                         </div>
