--- a/src/views/partials/banner.ejs
+++ b/src/views/partials/banner.ejs
@@ -1,23 +1,26 @@
 <section class="carousel">
     <div class="carousel-slide active">
-        <img src="images/banner/Banner_craneana.jpg" alt="Imagen 1">
+        <img src="images/banner/Banner_Respiratoria.jpg" alt="Protección-Respiratoria">
         <div class="carousel-caption">
             <h2 class="carousel-title">¡TRABAJAMOS PARA PROTEGERTE!</h2>
             <p class="carousel-description">EQUIPOS DE PROTECCIÓN PERSONAL QUE ASEGURAN TU SEGURIDAD.</p>
+            <a class="carosel-button__buy btn btn--primary">COMPRAR AHORA +</a>
         </div>
     </div>
     <div class="carousel-slide">
-        <img src="images/banner/Banner_auditiva.jpg" alt="Imagen 2">
+        <img src="images/banner/Banner_Auditiva.jpg" alt="Protección-Auditiva">
         <div class="carousel-caption">
             <h2 class="carousel-title">SOMOS TU ALIADO EN SEGURIDAD LABORAL</h2>
-            <p class="carousel-description">EL RESPANDO QUE NECESITAS EN CADA JORNADA.</p>
+            <p class="carousel-description">EL RESPALDO QUE NECESITAS EN CADA JORNADA.</p>
+            <a class="carosel-button__buy btn btn--primary">COMPRAR AHORA +</a>
         </div>
     </div>
     <div class="carousel-slide">
-        <img src="images/banner/Banner_Facial.jpg" alt="Imagen 3">
+        <img src="images/banner/Banner_Ocular.jpg" alt="Protección-Ocular">
         <div class="carousel-caption">
             <h2 class="carousel-title">CALIDAD CERTIFICADA EN CADA PRODUCTO</h2>
             <p class="carousel-description">EPPS QUE CUMPLEN CON LOS ESTÁNDARES DE SEGURIDAD MÁS ALTOS.</p>
+            <a class="carosel-button__buy btn btn--primary">COMPRAR AHORA +</a>
         </div>
     </div>
     <div class="carousel-controls">
