--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -14,9 +14,8 @@
                 </div>
                 <div class="header__search-container">
                     <input type="text" placeholder="Buscar..." class="header__search-input input">
-                    <button class="header__search-button btn"><i class="fas fa-search"></i></button>
+                    <button class="header__search-button btn btn--secondary"><i class="fas fa-search"></i></button>
                 </div>
-
                 <div class="header__icon-container">
                     <i class="fas fa-heart header__icon"></i>
                     <i class="fas fa-shopping-cart header__icon"></i>
@@ -45,7 +44,7 @@
                 </ul>
                 <div class="header__search-container">
                     <input type="text" placeholder="Buscar..." class="header__search-input input" name="search">
-                    <button class="header__search-button btn"><i class="fas fa-search"></i></button>
+                    <button class="header__search-button btn btn--secondary"><i class="fas fa-search"></i></button>
                 </div>
             </div>
         </div>
