--- a/public/css/categorie.css
+++ b/public/css/categorie.css
@@ -8,7 +8,7 @@
 /* Tarjetas de Categoría */
 .category-card {
     background-color: var(--white);
-    border: 1px solid #ddd;
+    border: 1px solid var(--lightgray);
     border-radius: 8px;
     overflow: hidden;
     position: relative;
@@ -48,18 +48,6 @@
 
 .categories__view-more {
     margin-top: 20px;
-    padding: 10px 20px;
-    font-size: 1rem;
-    color: #fff;
-    background-color: #007BFF;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.categories__view-more:hover {
-    background-color: #0056b3;
 }
 
 @media (max-width: 1023px) {
