--- a/public/css/general.css
+++ b/public/css/general.css
@@ -1,35 +1,29 @@
 :root {
-/* Colores básicos */
---orange: #E65100;       /* Naranja (primario) */
---gray: #333333;         /* Gris oscuro (secundario) */
---white: #ffffff;        /* Blanco (fondo) */
---yellow: #FFDE00;       /* Amarillo (acento) */
---black: #000000;        /* Negro (texto) */
+/* Colores principales */
+--gray: #666666;
+--white: #ffffff;
+--yellow: #ffde00;
+--black: #000000;
+--red: #ff5757; 
+--green: #4caf50;
+--blue:#0066cc;
 
 /* Colores fuertes */
---darkorange: #BF4500;   /* Naranja oscuro (para hover o elementos destacados) */
---darkgray: #777777;     /* Gris muy oscuro (para fondos o texto secundario) */
---darkwhite: #E0E0E0;    /* Gris claro (para fondos de secciones) */
---darkyellow: #D4B800;   /* Amarillo oscuro (para textos o botones secundarios) */
---darkblack: #000000;    /* Negro absoluto (para textos importantes o títulos) */
+--darkgray: #333333;
+--darkwhite: #e5e5e5;
+--darkyellow: #ffd42a;; 
+--darkred: #d43a3a;
+--darkgreen: #388e3c;
+--darkblue:#004a99;
 
 /* Colores suaves */
---lightorange: #FF7433;  /* Naranja claro (para hover o elementos destacados suaves) */
---lightgray: #dddddd;    /* Gris claro (para fondos o textos secundarios) */
---lightwhite: #ffffff;    /* Blanco (para fondo) */
---lightyellow: #F9C97A;   /* Amarillo claro (para elementos suaves o destacados) */
---lightblack: #484848;    /* Negro suave (para textos en fondos claros) */
---lightblue:#3483FA;
+--lightgray: #c4c4c4;
+--lightyellow: #fff066;
+--lightblack: #484848;
 
-/* Colores adicionales para desarrollo */
---blue: #2196F3;         /* Azul (para elementos de enlace o acción) */
---red: #F44336;          /* Rojo (para alertas o mensajes de error) */
---green: #4CAF50;        /* Verde (para mensajes de éxito o confirmación) */
---purple: #9C27B0;       /* Púrpura (para elementos especiales o llamados a la acción) */
---teal: #009688;         /* Verde azulado (para secciones informativas) */
-
-  /* FONTS */
+  /* Fonts */
 --FamilyRoboto: 'Roboto', sans-serif;
+--FamilyLato: 'Lato', sans-serif;
 }
 
 *{
@@ -41,10 +35,13 @@ body {
     margin: 0px;
     box-sizing: border-box;
 }
+/*
+h1, h2, h3 {
+    font-family: var(--FamilyLato);
+}*/
 
 a {
     text-decoration: none;
-    
 }
 
 .btn {
@@ -53,38 +50,50 @@ a {
     border-radius: 5px;
     cursor: pointer;
     font-size: 1rem;
-    /*font-weight: bold;*/
+    font-weight: 400;
     text-align: center;
+    transition: background-color 0.3s ease;
 }
 
 .btn--primary {
     background-color: var(--yellow);
-    color: var(--gris);
+    color: var(--darkgray);
 }
 
 .btn--primary:hover {
     background-color: var(--darkyellow);
+    color: var(--darkgray);
 }
 
 .btn--secondary {
-    background-color: #f1f1f1;
-    border: 1px solid var(--white);
-    color: var(--gray);
-}
-
-.btn--secondary:hover {
-    background-color: var(--darkyellow);
-    border: 1px solid var(--white);
+    background-color: var(--darkgray);    
     color: var(--white);
 }
 
-.label {
-    font-weight: 500;
-    margin-bottom: 5px;
-    display: inline-block;
+.btn--secondary:hover {
+    background-color: var(--gray);    
+    color: var(--white);
 }
 
-.label--small{
+.btn--tertiary {
+    background-color: var(--darkgray);
+    color: var(--white);
+}
+
+.btn--tertiary:hover {
+    background-color: var(--white);
+    border: 1px solid var(--darkgray);
+    color: var(--darkgray);
+}
+
+.text--medium{
+    margin: 0 0 5px;
+    font-weight: bold;
+    text-align: left;
+    color: var(--gray);
+}
+
+.text--small{
     margin: 0;
     color: var(--gray);    
     font-size: 0.9rem;
@@ -92,11 +101,10 @@ a {
     margin-bottom: 5px;
 }
 
-.label--medium{
-    margin: 0 0 5px;
-    font-weight: bold;
-    text-align: left;
-    color: var(--gray);
+.label {
+    font-weight: 500;
+    margin-bottom: 5px;
+    display: inline-block;
 }
 
 .label--form {
@@ -113,9 +121,4 @@ a {
     outline: none;
     color: var(--gray);
     font-size: 1rem;
-}
-
-.label--highlight {
-    color: #e74c3c;
-    font-size: 16px;
 }
