--- a/public/css/home.css
+++ b/public/css/home.css
@@ -25,7 +25,7 @@
 .newsletter__title {
     font-size: 2.5rem;
     font-weight: bold;
-    color: var(--black);
+    color: var(--darkgray);
 }
 /*** /GENERALES ***/
 
@@ -42,7 +42,7 @@
     display: flex;
     flex-direction: column;
     background-color: var(--white);
-    border: 1px solid #ddd;
+    border: 1px solid var(--lightgray);
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
@@ -75,20 +75,25 @@
     align-items: flex-start;
     background-color: var(--white);
     padding: 15px;
-    /*border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);*/
 }
 
 .contact__info-item i {
-    font-size: 24px;
+    font-size: 1.5rem;
     margin: 0px 10px 10px 0px;    
-    color: var(--gray);
+    color: var(--darkgray);
 }
 
 .contact__chat-link, .contact__email-link{
-    color: var(--gray);
+    color: var(--blue);
 }
 
+.contact__chat-link:hover{
+    color: var(--darkblue);
+}
+
+.contact__email-link:hover{
+    color: var(--darkblue);
+}
 
 /*** SECTION CONTACT ***/
 
@@ -104,9 +109,6 @@
     width: 40%;
 }
 
-.newsletter__title{
-    color: var(--gray);
-}
 .newsletter__form-container {
     display: flex;
     justify-content: flex-end;
@@ -132,7 +134,6 @@
 }
 
 /*** SECTION NEWSLETTER ***/
-
 .whatsapp-icon {
     position: fixed;
     bottom: 20px;
