--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -6,8 +6,8 @@
     <title>
         <%= title %> - WorkZone
     </title>
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Font Awesome -->    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
     <!-- Style -->
     <link rel="stylesheet" href="./css/style.css" />
     <!-- Icon -->
