fix(JIRA-14): correct layout and styling for footer and update related views

--- a/src/views/other/home.ejs
+++ b/src/views/other/home.ejs
@@ -334,6 +334,7 @@
                 </section>
                 <!-- /Section newsletter -->
             </main>
+            <%- include("../partials/footer") %>
             <!-- Icon whatsapp -->
             <a href="https://wa.me/5491156092589" target="_blank" class="whatsapp-icon">
                 <i class="fab fa-whatsapp"></i>
