--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,134 +1,157 @@
 .header__navbar {
-    background-color: var(--white);
-    padding: 10px 20px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  background-color: var(--yellow);
+  padding: 10px 20px;
 }
 
 .header__container {
-    display: flex;
+  /* display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: center; */
+  box-sizing: border-box;
+}
+
+.header__navbar-img-list {
+  display: flex;
+  align-items: center;
+  background-color: red;
+  width: 40%;
 }
 
 .header__logo {
-    height: 50px;
+  height: 50px;
 }
 
 .header__nav-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    align-items: center;
+  list-style: none;
+  padding: 20 px;
+  margin: 0;
+  display: flex;
+  align-items: center;
 }
 
 .header__nav-item {
-    margin: 0 15px;
+  margin: 0 15px;
 }
 
 .header__nav-link {
-    text-decoration: none;
-    color: black;
-    font-weight: bold;
+  color: var(--darkgray);
+  font-weight: bold;
+}
+
+.header__nav-link:hover {
+  color: var(--gray);
+  text-decoration-color: var(--gray);
+  text-decoration-thickness: 2px;
+  text-decoration: underline;
+  text-underline-offset: 2px;
 }
 
 .header__search-container {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
+  background-color: red !important;
+  width: 30%;
 }
 
 .header__search-input {
-    padding: 5px;
-    border: 1px solid #ccc;
-    border-radius: 5px 0 0 5px;
+  border-radius: 5px 0 0 5px;
+  /*  padding: 5px;
+    border: 1px solid #ccc;*/
 }
 
 .header__search-button {
-    padding: 6px 10px;
-    border: none;
-    background-color: #f1f1f1;
-    border-radius: 0 5px 5px 0;
-    cursor: pointer;
+  border-radius: 0 5px 5px 0;
 }
 
 .header__icon-container {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  background-color: red !important;
+  width: 10%;
 }
 
 .header__icon {
-    margin-left: 15px;
-    font-size: 20px;
-    cursor: pointer;
+  color: var(--darkgray);
+  margin-left: 15px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.header__icon:hover {
+  color: var(--gray);
 }
 
 /* Navbar para Desktop */
 .header__navbar-desktop {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
 /* Navbar para Mobile y Tablet */
 .header__navbar-mobile {
-    display: none;
-    flex-direction: column;
-    width: 100%;
+  display: none;
+  flex-direction: column;
+  width: 100%;
 }
 
 .header__navbar-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
 .header__hamburger {
-    background: none;
-    border: none;
-    cursor: pointer;
-    font-size: 24px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 24px;
+}
+
+@media (max-width: 1023px) {
+  .header__navbar {
+    padding: 10px 20px;
+  }
+
+  .header__navbar-desktop {
+    display: none;
+  }
+
+  .header__navbar-mobile {
+    display: flex;
+  }
+
+  .header__nav-list {
+    display: none;
+    flex-direction: column;
+    padding: 0;
+    margin: 0;
+  }
+
+  .header__nav-item {
+    margin: 10px 0;
+    text-align: center;
+  }
+
+  .header__nav-list.active {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .header__search-container {
+    width: 100%;
+    margin-top: 10px;
+  }
+
+  .header__search-input {
+    flex: 1;
+    border-radius: 5px;
+  }
 }
 
 /* Media Queries */
-@media (max-width: 768px) {
-    .header__navbar-desktop {
-        display: none;
-    }
-    .header__navbar-mobile {
-        display: flex;
-    }
-
-    .header__nav-list {
-        display: none;
-        flex-direction: column;
-        padding: 0;
-        margin: 0;
-    }
-
-    .header__nav-item {
-        margin: 10px 0;
-        text-align: center;
-    }
-
-    .header__nav-list.active {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .header__search-container {
-        width: 100%;
-        margin-top: 10px;
-    }
-
-    .header__search-input {
-        flex: 1;
-        border-radius: 5px;
-    }
-
-    .header__search-button {
-        margin-left: 5px;
-    }
+@media (max-width: 767px) {
 }
-
