--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -12,4 +12,6 @@
     <link rel="stylesheet" href="./css/style.css" />
     <!-- Icon -->
     <link rel="icon" href="images/workZone.ico" type="image/x-icon">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
