--- a/src/views/partials/scripts.ejs
+++ b/src/views/partials/scripts.ejs
@@ -36,3 +36,6 @@
     // Muestra el primer slide al cargar
     showSlide(currentSlide);
 </script>
+
+<!-- Bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
