--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,4 +10,5 @@
 @import "../css/reviews.css";
 @import "../css/about.css";
 @import "../css/product.css";
-@import "../css/categorie.css"
+@import "../css/categorie.css";
+@import "../css/detail.css"
