--- a/public/css/header.css
+++ b/public/css/header.css
@@ -70,7 +70,7 @@
   padding: 8px 12px;
   background-color: var(--darkgray);
   border: 1px solid var(--lightgray);
-  border-radius: 0 5px 5px 0;
+  border-radius: 0 5px 5px 0!important;
   cursor: pointer;
 }
 
