--- a/public/css/product.css
+++ b/public/css/product.css
@@ -66,7 +66,7 @@
 
 .product-card__price {
   font-size: 1.2rem;
-  color: var(--green);
+  color: var(--green)!important;
   font-weight: bold;
   margin: 5px 0px 15px 0px;
 }
