--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -4,12 +4,12 @@
             <!-- Navbar para Desktop -->
             <div class="header__navbar-desktop">
                 <div class="header__navbar-img-list">
-                    <img src="images/workZone-logo-gray.png" alt="Logo WorkZone" class="header__logo">
+                    <img src="/images/workZone-logo-gray.png" alt="Logo WorkZone" class="header__logo">
                     <ul class="header__nav-list">
-                        <li class="header__nav-item"><a href="#" class="header__nav-link">Inicio</a></li>
+                        <li class="header__nav-item"><a href="/" class="header__nav-link">Inicio</a></li>
                         <li class="header__nav-item"><a href="#products" class="header__nav-link">Productos</a></li>
-                        <li class="header__nav-item"><a href="#reviews" class="header__nav-link">Acerca de</a></li>
-                        <li class="header__nav-item"><a href="#contact" class="header__nav-link">Contáctanos</a></li>
+                        <li class="header__nav-item"><a href="/#reviews" class="header__nav-link">Acerca de</a></li>
+                        <li class="header__nav-item"><a href="/#contact" class="header__nav-link">Contáctanos</a></li>
                     </ul>
                 </div>
                 <div class="header__search-container">
@@ -29,7 +29,7 @@
                     <button class="header__hamburger" onclick="toggleMenu()">
                         <i class="fas fa-bars"></i>
                     </button>
-                    <img src="images/workZone-logo-gray.png" alt="Logo WorkZone" class="header__logo">
+                    <img src="/images/workZone-logo-gray.png" alt="Logo WorkZone" class="header__logo">
                     <div class="header__icon-container">
                         <i class="fas fa-heart header__icon"></i>
                         <i class="fas fa-shopping-cart header__icon"></i>
@@ -37,7 +37,7 @@
                     </div>
                 </div>
                 <ul class="header__nav-list" id="header-nav-list">
-                    <li class="header__nav-item"><a href="#" class="header__nav-link">Inicio</a></li>
+                    <li class="header__nav-item"><a href="/" class="header__nav-link">Inicio</a></li>
                     <li class="header__nav-item"><a href="#products" class="header__nav-link">Productos</a></li>
                     <li class="header__nav-item"><a href="#reviews" class="header__nav-link">Acerca de</a></li>
                     <li class="header__nav-item"><a href="#contact" class="header__nav-link">Contáctanos</a></li>
