--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -6,12 +6,15 @@
     <title>
         <%= title %> - WorkZone
     </title>
-    <!-- Font Awesome -->    
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
+    <!-- Toastr -->
+    <link rel="stylesheet" href="/css/library/toastr.min.css">    
     <!-- Style -->
     <link rel="stylesheet" href="/css/style.css" />
     <!-- Icon -->
     <link rel="icon" href="/images/workZone.ico" type="image/x-icon">
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
