--- a/src/views/partials/scripts.ejs
+++ b/src/views/partials/scripts.ejs
@@ -39,3 +39,9 @@
 
 <!-- Bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+<!-- Toastr -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+<script src="/js/library/toastr.min.js"></script>
+<script src="/js/config/toastr.config.js"></script>
+<script src="/js/script.js"></script>
