--- a/src/views/product/detail.ejs
+++ b/src/views/product/detail.ejs
@@ -70,6 +70,7 @@
         <!-- /Icon whatsapp -->
         <!-- Scripts -->
         <%- include("../partials/scripts") %>
+        <!-- /Scripts -->
   </body>
 
 </html>
