feat(JIRA-18): update cart view, layout, and implement JS functions with toastr alerts

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,4 +11,5 @@
 @import "../css/about.css";
 @import "../css/product.css";
 @import "../css/categorie.css";
-@import "../css/detail.css"
+@import "../css/detail.css";
+@import "../css/cart.css"
