--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -18,7 +18,11 @@
                 </div>
                 <div class="header__icon-container">
                     <i class="fas fa-heart header__icon"></i>
-                    <i class="fas fa-shopping-cart header__icon"></i>
+                    <a href="/carrito-compra"><i class="fas fa-shopping-cart header__icon"></i>
+                        <span id="cart-count" class="position-absolute top-60 start-100 translate-middle badge rounded-pill bg-danger">
+                            0
+                        </span>
+                    </a>                    
                     <i class="fas fa-user header__icon"></i>
                 </div>
             </div>
@@ -32,7 +36,7 @@
                     <img src="/images/workZone-logo-gray.png" alt="Logo WorkZone" class="header__logo">
                     <div class="header__icon-container">
                         <i class="fas fa-heart header__icon"></i>
-                        <i class="fas fa-shopping-cart header__icon"></i>
+                        <a href="/carrito-compra"><i class="fas fa-shopping-cart header__icon"></i></a>      
                         <i class="fas fa-user header__icon"></i>
                     </div>
                 </div>
