--- a/public/css/general.css
+++ b/public/css/general.css
@@ -76,16 +76,21 @@ a {
 }
 
 .btn--tertiary {
-    background-color: var(--darkgray)!important;
-    color: var(--white)!important;
-}
-
-.btn--tertiary:hover {
     background-color: var(--white)!important;
     border: 1px solid var(--darkgray)!important;
     color: var(--darkgray);
+    
 }
 
+.btn--tertiary:hover {
+    background-color: var(--lightgray)!important; /* Nuevo color según las buenas prácticas */
+    color: var(--darkgray)!important;
+    border: 1px solid var(--lightgray)!important;
+}
+
+.text--green{
+    color: var(--green);
+}
 .text--medium{
     margin: 0 0 5px;
     font-weight: bold;
