feat(JIRA-22): create list view and implement layout and styling

--- a/src/views/cart/cart.ejs
+++ b/src/views/cart/cart.ejs
@@ -30,7 +30,7 @@
                                 <span class="fw-bold fs-2 text--green"><output id="cart-total">0.00</output></span>
                             </div>
                             <button class="btn btn--secondary w-100 mb-2" id="btn-buy">COMPRAR</button>
-                            <a href="/productos/lista-productos" class="btn btn--tertiary w-100 mb-2">SEGUIR MIRANDO</a>
+                            <a href="/productos/lista" class="btn btn--tertiary w-100 mb-2">SEGUIR MIRANDO</a>
                             <button class="btn btn--primary w-100" id="clear-cart">VACIAR CARRITO</button>
                         </div>
                     </div>
