--- a/src/views/partials/scripts.ejs
+++ b/src/views/partials/scripts.ejs
@@ -44,4 +44,9 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script src="/js/library/toastr.min.js"></script>
 <script src="/js/config/toastr.config.js"></script>
+
+<!-- Cart -->
 <script src="/js/functions/cart.js"></script>
+
+<!-- List -->
+<script src="/js/functions/list.js"></script>
