--- a/src/views/product/detail.ejs
+++ b/src/views/product/detail.ejs
@@ -54,7 +54,7 @@
               </div>
               <!-- Botones de acción -->
               <div class="d-flex gap-3 mt-4">
-                <a href="/productos/lista-productos" class="btn btn--primary w-100">SEGUIR MIRANDO</a>
+                <a href="/productos/lista" class="btn btn--primary w-100">SEGUIR MIRANDO</a>
                 <button type="button" class="btn btn--secondary w-100"
                   onclick="addProductCart('<%= product.id %>')">AGREGAR AL CARRITO</button>
               </div>
@@ -67,10 +67,10 @@
         <a href="https://wa.me/5491156092589" target="_blank" class="whatsapp-icon">
           <i class="fab fa-whatsapp"></i>
         </a>
-        <!-- /Icon whatsapp -->
+
         <!-- Scripts -->
         <%- include("../partials/scripts") %>
-        <!-- /Scripts -->
+
   </body>
 
 </html>
