--- a/src/views/other/home.ejs
+++ b/src/views/other/home.ejs
@@ -88,11 +88,6 @@
                                                                         <i class="fa-solid fa-cart-shopping"></i>
                                                                     </button>
                                                                 </div>
-                                                                
-                                                                <!-- <button
-                                                                    class="product-card__add-button btn btn--primary"
-                                                                    onclick="addProductCart('<%= products[j].id %>')">AÑADIR
-                                                                    AL CARRITO</button> -->
                                                             </div>
                                                         </article>
                                                     </div>
@@ -103,71 +98,9 @@
                                 </div>
                             </div>
 
-                            <!-- 
-                        <article class="product-card">
-                            <div class="product-card__image-container">
-                                <img src="images/products/casco_bombero.png" alt="Producto" class="product-card__image">
-                                <i class="fa-regular fa-heart product-card__favorite-icon"></i>
-                            </div>
-                            <div class="product-card__info">
-                                <p class="product-card__category">CATEGORIA</p>
-                                <p class="product-card__name">CASCO PARA BOMBEROS</p>
-                                <p class="product-card__price">$ 1.116.846,17</p>
-                                <button class="product-card__add-button btn btn--primary">AÑADIR AL CARRITO</button>
-                            </div>
-                        </article>  
-                        <article class="product-card">
-                            <div class="product-card__image-container">
-                                <img src="images/products/anteojos-seguridad.jpg" alt="Producto" class="product-card__image">
-                                <i class="fa-regular fa-heart product-card__favorite-icon"></i>
-                            </div>
-                            <div class="product-card__info">
-                                <p class="product-card__category">CATEGORIA</p>
-                                <p class="product-card__name">ANTEOJOS DE SEGURIDAD</p>
-                                <p class="product-card__price">$ 23.972,23</p>
-                                <button class="product-card__add-button btn btn--primary">AÑADIR AL CARRITO</button>
-                            </div>
-                        </article>  
-                        <article class="product-card">
-                            <div class="product-card__image-container">
-                                <img src="images/products/protector-auditivo.jpg" alt="Producto" class="product-card__image">
-                                <i class="fa-regular fa-heart product-card__favorite-icon"></i>
-                            </div>
-                            <div class="product-card__info">
-                                <p class="product-card__category">CATEGORIA</p>
-                                <p class="product-card__name">PROTECTOR AUDITIVO DE COPA</p>
-                                <p class="product-card__price">$ 44.408,25</p>
-                                <button class="product-card__add-button btn btn--primary">AÑADIR AL CARRITO</button>
-                            </div>
-                        </article>  
-                        <article class="product-card">
-                            <div class="product-card__image-container">
-                                <img src="images/products/respirador-media.jpg" alt="Producto" class="product-card__image">
-                                <i class="fa-regular fa-heart product-card__favorite-icon"></i>
-                            </div>
-                            <div class="product-card__info">
-                                <p class="product-card__category">CATEGORIA</p>
-                                <p class="product-card__name">RESPIRADOR MEDIA CARA</p>
-                                <p class="product-card__price">$ 33.292,95</p>
-                                <button class="product-card__add-button btn btn--primary">AÑADIR AL CARRITO</button>
-                            </div>
-                        </article>  
-                        <article class="product-card">
-                            <div class="product-card__image-container">
-                                <img src="images/products/casco_de_altura.png" alt="Producto" class="product-card__image">
-                                <i class="fa-regular fa-heart product-card__favorite-icon"></i>
-                            </div>
-                            <div class="product-card__info">
-                                <p class="product-card__category">CATEGORIA</p>
-                                <p class="product-card__name">CASCO DE ALTURA</p>
-                                <p class="product-card__price">$ 64.575,30</p>
-                                <button class="product-card__add-button btn btn--primary">AÑADIR AL CARRITO</button>
-                            </div>
-                        </article>  
 
- -->
                         </div>
-                        <button class="products__view-more btn btn--secondary">VER MÁS</button>
+                        <a href="/productos/lista" class="btn btn--tertiary mt-4"> VER MÁS</a>
                     </section>
                     <!-- /Section products -->
                     <!-- Section categories -->
