feat(JIRA-22): create search view and implement layout and styling

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -13,8 +13,8 @@
                     </ul>
                 </div>
                 <div class="header__search-container">
-                    <input type="text" placeholder="Buscar..." class="header__search-input input">
-                    <button class="header__search-button btn btn--secondary"><i class="fas fa-search"></i></button>
+                        <input type="text" name="keywords" id="search-input" placeholder="Buscar..." class="header__search-input input">
+                        <button class="header__search-button btn btn--secondary" id="search-button"><i class="fas fa-search"></i></button>
                 </div>
                 <div class="header__icon-container">
                     <i class="fas fa-heart header__icon"></i>
