--- a/src/views/partials/scripts.ejs
+++ b/src/views/partials/scripts.ejs
@@ -50,3 +50,6 @@
 
 <!-- List -->
 <script src="/js/functions/list.js"></script>
+
+<!-- Search -->
+<script src="/js/functions/search.js"></script>
